Make it personal

--- a/13000020.md
+++ b/13000020.md
@@ -1,3 +1,3 @@
 # Digit-Sum
 
-The Digit-Sum is the [Sum](13000001.md) of the [Digits](12000066.md) of a [Number](60000.md).
+I am the [Sum](13000001.md) of the [Digits](12000066.md) of a [Number](60000.md).
