--- a/20000028.md
+++ b/20000028.md
@@ -1,3 +1,3 @@
 # Smart-Phone-Online-Mode
 
-The Smart-Phone-Oline-Mode is the [Opposite](60103.md) of the [Smart-Phone-Offline-Mode](20000026.md).
+I am the [Opposite](60103.md) of the [Smart-Phone-Offline-Mode](20000026.md).
