--- a/300001.md
+++ b/300001.md
@@ -1,6 +1,6 @@
 # Vim dG is fastest!
 
-The Vim dG command is the fastest way in [Vim](41.md) to delete all Characters from the current Cursor Position up to the End.
+I am the fastest way in [Vim](41.md) to delete all Characters from the current Cursor Position up to the End.
 
 Maybe it is even the fastest way in the whole Editor Universe?
 
