--- a/302000003.md
+++ b/302000003.md
@@ -1,3 +1,3 @@
 # Brezel-Price-Index
 
-The Brezel-Price-Index is the [Average](12000060.md) of the [Price](130000012.md) for a [Brezel](203410001.md) determinded by [My-Brezel-Price-Study](302000001.md).
+I am the [Average](12000060.md) of the [Price](130000012.md) for a [Brezel](203410001.md) determinded by [My-Brezel-Price-Study](302000001.md).
