--- a/60091.md
+++ b/60091.md
@@ -1,3 +1,3 @@
 # Right-Relation-Thing
 
-The Right-Relation-Thing is the second [Relation-Thing](60089.md) in a [Relation](60005.md).
+I am the second [Relation-Thing](60089.md) in a [Relation](60005.md).
