--- a/60157.md
+++ b/60157.md
@@ -1,3 +1,3 @@
 # End
 
-The End is the [Opposite](60103.md) of the [Beginning](60154.md).
+I am the [Opposite](60103.md) of the [Beginning](60154.md).
