--- a/12000063.md
+++ b/12000063.md
@@ -1,3 +1,3 @@
 # Maximum
 
-The Maximum is the [Result](60033.md) of the [Maximum-Function](12000062.md).
+I am the [Result](60033.md) of the [Maximum-Function](12000062.md).
