--- a/12000064.md
+++ b/12000064.md
@@ -1,3 +1,3 @@
 # Minimum
 
-The Minimum is the [Result](60033.md) of the [Minimum-Function](12000061.md).
+I am the [Result](60033.md) of the [Minimum-Function](12000061.md).
