--- a/20000027.md
+++ b/20000027.md
@@ -1,3 +1,3 @@
 # Smart-Phone-Bright-Mode
 
-The Smart-Phone-Bright-Mode is the [Opposite](60103.md) of the [Smart-Phone-Dark-Mode](20000025.md).
+I am the [Opposite](60103.md) of the [Smart-Phone-Dark-Mode](20000025.md).
