--- a/60090.md
+++ b/60090.md
@@ -1,3 +1,3 @@
 # Left-Relation-Thing
 
-The Left-Relation-Thing is the first [Relation-Thing](60089.md) in a [Relation](60005.md).
+I am the first [Relation-Thing](60089.md) in a [Relation](60005.md).
