--- a/60111.md
+++ b/60111.md
@@ -1,3 +1,3 @@
 # Sharing-Process
 
-The Sharing-Sharing is [Process](60062.md) that allows [Usage](600079.md) of one [Thing](60003.md) by more than one [Thing](60003.md).
+I am [Process](60062.md) that allows [Usage](600079.md) of one [Thing](60003.md) by more than one [Thing](60003.md).
