--- a/23.md
+++ b/23.md
@@ -1,5 +1,5 @@
 # About-Dings-Project
-
+}
 I am a [Blog](700019.md) about the [Dings-Project](300000006.md).
 
 ## Table of Contents <a id="1"/>
@@ -6836,7 +6836,7 @@ And the highest Quality regarding Reality should have the [Orignal](60022.md), n
 
 In Photography the "best" [Image-Format](30010006.md) regarding Quality is probably the uncompressed RAW-Image-Format, but for our Example this is a bit more complicated.
 
-The Reason is that current [Smart-Phones](20000005.md) normally store the Photos already in JPG-Image-Format and this is also the case for our [Picture-for-Nicole](55.jpg).
+The Reason is that current [Smart-Phones](20000005.md) normally store the Photos already in JPG-Image-Format and this is also the case for our [Picture-for-Nicole](55.md).
 
 When I convert the compressed Image back to RAW-Image-Format, we probably even loose Qualtiy because during the [Conversion](600037.md) Image-Information will be lost.
 
