--- a/1100000022.md
+++ b/1100000022.md
@@ -1,3 +1,3 @@
 # Traffic-Lane
 
-A Traffic-Lane is [Part](60084.md) of a [Street](100000019.md).
+I am [Part](60084.md) of a [Street](1100000019.md).
