--- a/200040040.md
+++ b/200040040.md
@@ -2,6 +2,10 @@
 
 I am a [Movie-Series](200300003.md).
 
+## About
+
+- My [Genre](200300009.md) is [Fantasy](270000034.md).
+
 ## Links
 
 - Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Carnival_Row)
