--- a/0.md
+++ b/0.md
@@ -1,3 +1,41 @@
-# Programming
+# Michael-Georg_Holzheu <a id="1"/>
 
-Programming is ...
+I am a [Human](40000001.md).
+
+## Profile <a id="1000"/>
+
+### Photo  <a id="1010"/>
+
+![Michael on VCFB-2019](400000028.jpg, style="width:256px; height: 256px; display: block; margin-left: auto; margin-right: auto;")
+
+### Identities <a id="1020"/>
+
+- [michael@E-Mail](1971099005.md)
+- [michael.holzheu@Facebook](1971099004.md)
+- [michael-holzheu@GitHub](1971099003.md)
+- [michael-holzheu@LinkedIn](1971099002.md)
+- [Holyheu@Youtube](190000002.md)
+- [Holyheu@Clash-of-Clans](4.md)
+- [Michael@Telephone](1971099006.md)
+
+## Name <a id="2000"/>
+
+I am simply called [Holyheu](270020000.md) in [Clash-of-Clans](3.md) and on [YouTube](190000001.md), but for the more complex [Real-World](404.md) I can offer the following [Translations](60126.md):
+
+- [First-Name](270000028.md):
+    - [English](600006.md): [Mike](270001000.md)
+    - [French](666003.md): [Michel](270001000.md)
+    - [German](140000025.md): [Michael](270001000.md)
+    - [Greek](666004.md): [Μιχαήλ](270001000.md) or [Michaíl](270001000.md)
+
+- [Last-Name](180000009.md):
+    - [English](600006.md): [Wood](91000002.md)-[Hay](91000003.md)
+    - [French](666003.md): [Bois](91000002.md)-[Fois](91000003.md)
+    - [German](140000025.md): [Holz](91000002.md)-[Heu](91000003.md)
+    - [Greek](666004.md): [Ξύλο](91000002.md)-[Σανός](91000003.md) or [Xýlo](91000002.md)-[Sanós](91000003.md)
+
+## Interests <a id="3000"/>
+
+I worked a lot on [My-Movies](1111.md), that can be seen on [my](190000002.md) You-Tube-Channel and on [Blogs](10000000001.md), that can be found on [my](192000004.md) Home-Page.
+
+But currently I spend most of my Resources for the [Dings-Project](300000006.md).
