--- a/2010024.md
+++ b/2010024.md
@@ -1,3 +1,8 @@
 # Ernst-Bloch-Choir-Conductor
 
-I am a [Woman](40000010.md), who has an appropriate Name for [Tübingen](2000001.md) and is the [Conductor](202000016.md) of the [Ernst-Bloch-Choir](2010013.md) for about 40 Years. 
+I am a [Woman](40000010.md).
+
+# About
+
+- My [Last-Name](180000009.md) is appropriate for [Tübingen](2000001.md).
+- I am a [Conductor](202000016.md) of the [Ernst-Bloch-Choir](2010013.md) for about 40 Years.
