--- a/21.md
+++ b/21.md
@@ -1327,7 +1327,7 @@ I escort my Room-Mate to the [Family-Doctor](800003.md) who has a [Medical-Pract
 #### Blog-Chain-Time 2023.04.16-22:3o in the Ibis-Style-Hotel-Restaurant <a id="2403"/>
 ###### Topics: Choir, Doctoral-Thesis
 
-After the Choir-Rehearsal we met at the [Ibis-Styles-Hotel](2010007.md). On many Screens a [Soccer](270110000.md)-Match between [Liverpool](170111001.md) and [Leeds-United](170111002.md) was shown. We had an (at least for me) emotional Discussion about [Doctoral-Theses](404.md) and public Access to academic Work-Results.
+After the Choir-Rehearsal we met at the [Ibis-Styles-Hotel](2010007.md). On many Screens a [Soccer](270110000.md)-Match between [Liverpool](170111001.md) and [Leeds-United](170111002.md) was shown. We had an (at least for me) emotional Discussion about [Doctorial-Theses](640007.md) and public Access to academic Work-Results.
 
 #### Blog-Chain-Time 2023.04.16-21:oo at the Choir <a id="2402"/>
 ###### Topics: Choir
@@ -1358,7 +1358,7 @@ Later I read the corresponding Article [[1]](#2252) on [Wikipedia](190000006.md)
 #### Blog-Chain-Time 2023.04.15-19:OO on my Way back from Nicole <a id="2205"/>
 ###### Topics: Soccer, Money
 
-Had a long Talk with a loyal [Fan](404.md) of the [Vfb-Stuttgart](404.md) about the commercial [Soccer-System](404.md).
+Had a long Talk with a loyal [Fan](404.md) of the [Vfb-Stuttgart](404.md) about the commercial [Soccer-System](270100001.md).
 
 #### Blog-Chain-Time 2023.04.15-16:3O on my Way to Nicole <a id="2204"/>
 ###### Topics: Money
@@ -1686,7 +1686,7 @@ Cannot buy a [Ticket](404.md) because the [Ticket-Machine](404.md) shows a "Syst
 #### Blog-Chain-Time 2023.04.05-18:42 still in the Bus <a id="1202"/>
 ###### Topics: Tübingen
 
-Had a quick Talk with the [Bus-Driver](404.md) about the very special [Streets](404.md) in Tübingen.
+Had a quick Talk with the [Bus-Driver](202000009.md) about the very special [Streets](1100000019.md) in Tübingen.
 
 #### Blog-Chain-Time 2023.04.05-19:26 in Station-Pub <a id="1203"/>
 ###### Topics: Drink, GFR
@@ -1696,12 +1696,12 @@ Missed the Train RB93 and decided to drink a [Hefe-Weizen](404.md).
 #### Blog-Chain-Time 2023.04.05-20:5O in Herrenberg <a id="1204"/>
 ###### Topics: Encounter, Geography, Personality
 
-Had a short Talk to two Man and one Woman about [Wladimir-Putin](70000002.md). One of the Men is [Russian](404.md) and tells me that he likes Putin. But he does not want to leave Germany because of his two Children.
+Had a short Talk to two Man and one Woman about [Wladimir-Putin](70000002.md). One of the Men is [Russian](666008.md) and tells me that he likes Putin. But he does not want to leave Germany because of his two Children.
 
 #### Blog-Chain-Time 2023.04.05-21:08 on my Way to Nicole <a id="1205"/>
 ###### Topics: GFR
 
-After some Problems I finally managed it to get a [Train](404.md) in the right Direction.
+After some Problems I finally managed it to get a [Train](8010004.md) in the right Direction.
 
 #### Blog-Chain-Time 2023.04.06-00:07 on my Way back to Tübingen <a id="1206"/>
 ###### Topics: Biology, Psychology
