--- a/23.md
+++ b/23.md
@@ -501,7 +501,7 @@ Ohm, how is the simple Formuala expressed in LaTeX? As already mentioned, my Ski
 
 ![Good-Old Book](400000116.jpg)
 
-Here a [Good-Man](404.md) with [Patience](41000007.md) is able find the [TeX-Symbols](60094.md), that are required for the Translation to the beautiful [Mathematics-Symbols](13000033.md):
+Here a [Good-Man](20000100003.md) with [Patience](41000007.md) is able find the [TeX-Symbols](60094.md), that are required for the Translation to the beautiful [Mathematics-Symbols](13000033.md):
 
 $$ x_{n + 1} = x_n - \frac{f(x_n)}{f'(x_n)} $$
 
@@ -1525,7 +1525,7 @@ After three hours work on Mac and on Windows, I gave up the Idea to build the AP
 #### Blog-Chain-Time 2023.05.23-17:40 in Tübingen <a id="5904"/>
 ###### Topics: Kivy, Buildozer, Android, APK
 
-After I followed the Instructions to create the Pong-App, I want to create an [Android](9100003.md) [APK-Package](404.md). So let's first install the [Builddozer](9000174.md) Packaging-Tool:
+After I followed the Instructions to create the Pong-App, I want to create an [Android](9100003.md) [APK-Package](9000176.md). So let's first install the [Builddozer](9000174.md) Packaging-Tool:
 
 ```bash
 (kivy_venv) ✘-1 ~/All-Dings/777/Test/2023.05.23-Kivy/Pong [Master|…8] 17:45
@@ -3085,7 +3085,7 @@ Updated 0 paths from the index
 #### Blog-Chain-Time 2023.04.21-18:00 in Tübingen <a id="2801"/>
 ###### Topics: Underscore, Hyphen, Decisions
 
-After I worked a lot on the Concepts [Relation](60005.md) and [Function](600039.md), I came back to Informatics again. Then I realized that my current [Naming_Convention](650011.md) to use [Hyphens](600008.md) as [Word_Separator_Character](404.md) is suboptimal for (Programming_Languages)[9010000.md]. Therefore I decided with a heavy [Heart](404.md) to exchange all the `-`-Characters with their `_`-Counter_Parts.
+After I worked a lot on the Concepts [Relation](60005.md) and [Function](600039.md), I came back to Informatics again. Then I realized that my current [Naming_Convention](650011.md) to use [Hyphens](600008.md) as [Word_Separator_Character](404.md) is suboptimal for (Programming_Languages)[9010000.md]. Therefore I decided with a heavy [Heart](40000039.md) to exchange all the `-`-Characters with their `_`-Counter_Parts.
 
 #### Blog-Chain-Time 2023.04.21-18:00 in Tübingen <a id="2802"/>
 ###### Topics: Abbreviation, Decisions
@@ -6154,7 +6154,7 @@ Date:   Wed Apr 5 15:54:52 2023 +0200
     Add Git-Fork
 ```
 
-We see that the last common Commit is the one with the [Hash-Value]() "97359863a670ffb1cb4aaaefe21fb4a90476368a". Therefore first I synchronize the backlevel COC-Metzingen-With-Nicole with the [Git-Fetch-Command](404.md):
+We see that the last common Commit is the one with the [Hash-Value]() "97359863a670ffb1cb4aaaefe21fb4a90476368a". Therefore first I synchronize the backlevel COC-Metzingen-With-Nicole with the [Git-Fetch-Command](9000200.md):
 
 ```
 ~/COC-Metzingen-with-Nicole$ git fetch Upstream
@@ -6167,14 +6167,14 @@ From github.com:michael-holzheu/Clash-of-Clans
  * [new branch]      Master     -> Upstream/Master
 ```
 
-Now all Information about the Upstream-Repository has been downloaded into the Fork-Repository. Next I use the [Git-Rebase-Command] to integrate the latest Changes from the Upstream-Repository's "Master" [Git-Branch](404.md) into my Fork-Repository "Master" Git-Branch:
+Now all Information about the Upstream-Repository has been downloaded into the Fork-Repository. Next I use the [Git-Rebase-Command] to integrate the latest Changes from the Upstream-Repository's "Master" [Git-Branch](9000069.md) into my Fork-Repository "Master" Git-Branch:
 
 ```
 ~/COC-Metzingen-with-Nicole$ git rebase Upstream/Master
 Successfully rebased and updated refs/heads/Master.
 ```
 
-With the [Git-Log-Command](404.md) I now can see that ...
+With the [Git-Log-Command](2000283.md) I now can see that ...
 
 ```
 commit 939bd9c557542db053c9f9f5b014d46f2e41e8fc (HEAD -> Master, Upstream/Master)
@@ -6206,7 +6206,7 @@ Date:   Wed Apr 5 18:01:21 2023 +0200
     Compare Git-Remotes
 ```
 
-Now the [Git-Heads](404.md) of both Repositories are at the same [Git-Commit](404.md) "939bd9c557542db053c9f9f5b014d46f2e41e8fc":
+Now the [Git-Heads](404.md) of both Repositories are at the same [Git-Commit](9000070.md) "939bd9c557542db053c9f9f5b014d46f2e41e8fc":
 
 ```
 ~/COC-Metzingen-with-Nicole$ git show
@@ -6345,7 +6345,7 @@ Upstream	git@github.com:michael-holzheu/Clash-of-Clans.git (push)
 
 ### Synchronize with Upstream-Repository 
 
-Now let's try to move the new Stuff to the Upstream-Repository. This can be done by a [Git-Pull-Request](404.md).
+Now let's try to move the new Stuff to the Upstream-Repository. This can be done by a [Git-Pull-Request](9000068.md).
 
 For doing that we first need to create a new [Git-Branch](e9000069.md) from the last common [Git-Commit](9000070.md) that we already identified by its Hash-Value 0f82393eb01a1122cb3a062e43a4a616c3282ec5:
 
@@ -6901,7 +6901,7 @@ As a [Mathematician](80000002.md) this [Result](60033.md) reminds me to a [Famou
 
 Perhaps, perhaps not...
 
-Wouldn't be [Life](404.md) without any [Secrets](https://www.holzheu.de/rumaenien-2018-teil-3#69mp3) a litte [Bit](75.md) too boring? Keep your courious and sleep well!
+Wouldn't be [Life](60064.md) without any [Secrets](https://www.holzheu.de/rumaenien-2018-teil-3#69mp3) a litte [Bit](75.md) too boring? Keep your courious and sleep well!
 
 ## Day-8: Big Data <a id="800"/>
 ###### Topics: Git, Lfs
