--- a/9.md
+++ b/9.md
@@ -24,7 +24,7 @@ Add an Explanation to the [DU-Script](2100000.md)
 
 ## Fix 404 Page
 
-I tried to add a [Sorry Page](404.md) for undefinded [Relations](404.md) according to the [Git-Hub](404.md) Instructions [^1], but it did not work. 
+I tried to add a [Sorry Page](404.md) for undefinded [Relations](60005.md) according to the [Git-Hub](9000061.md) Instructions [^1], but it did not work.
 
 [^1] Custom 404 page: https://docs.github.com/en/pages/getting-started-with-github-pages/creating-a-custom-404-page-for-your-github-pages-site
 
