--- a/1971092009.md
+++ b/1971092009.md
@@ -13,8 +13,35 @@ Create the [CRS](2000271.md).
 - [Https://Www.Df.Eu](https://www.df.eu/de/support/df-faq/ssl-zertifikate/externe-einbindung/csr-erstellen/#accordion-23228)
 - [Https://Knowledge.CheapSslSecurity.Com/](https://knowledge.cheapsslsecurity.com/support/solutions/articles/22000200075-apache-openssl)
 
+### From existing Server-Key and Config
+
 ```bash
-$ openssl req -new -newkey rsa:2048 -nodes -keyout server.key -out server.csr
+$ cat csr.conf
+[ req ]
+default_bits       = 4096
+default_md         = sha512
+default_keyfile    = 888888896.key
+prompt             = no
+encrypt_key        = no
+distinguished_name = req_distinguished_name
+# distinguished_name
+[ req_distinguished_name ]
+countryName            = "DE"                     # C=
+localityName           = "Tübingen"               # L=
+organizationName       = "Apps.Holzheu.De         # O=
+organizationalUnitName = "Dings.Site"             # OU=
+commonName             = "*.dings.site"           # CN=
+emailAddress           = "michael@dings.site"     # CN/emailAddress=
+```
+
+```bash
+$ openssl req -config csr.conf -new -key 888888896.key -verbose -out dings.site.wildcard.csr
+```
+
+### From Scratch
+
+```bash
+$ openssl req -new -newkey rsa:2048 -nodes -keyout dings.site.key -out dings.site.csr
 ```
 Generating a 2048 bit RSA private key
 ..............................+++++
@@ -32,7 +59,7 @@ Country Name (2 letter code) []:*de*
 State or Province Name (full name) []:*Baden-Württemberg*
 Locality Name (eg, city) []:*Tübingen*
 Organization Name (eg, company) []:*Michael Holzheu*
-Organizational Unit Name (eg, section) []:
+Organizational Unit Name (eg, section) []: *Apps.Holzheu*
 Common Name (eg, fully qualified host name) []:*dings.site*
 Email Address []:*michael@dings.site*
 
@@ -41,6 +68,7 @@ to be sent with your certificate request
 A challenge password []:
 ```
 
+Note that for Wild-Card-Certificates, specify "*.dings.site".
 ```bash
 $ ls
 server.csr server.key
