--- a/0.md
+++ b/0.md
@@ -2,6 +2,10 @@
 
 I am a [Human](40000001.md).
 
+## About
+
+- I am a [Friend](180000002.md) of [Frau-Ulmerin](151000002.md).
+
 ## Profile <a id="1000"/>
 
 ### Photo  <a id="1010"/>
