--- a/300000009.md
+++ b/300000009.md
@@ -2,22 +2,15 @@
 
 I am a [Work-Flow](120000002.md) for the [Dings-Project](300000006.md).
 
-## Table-Of-Contents
-
-- [Render-Day-X](#1000)
-- [Dead-Dings-Files](#1100)
-
-## Render-Day-X <a id="1000"/>
-
-### Since Day-110 <a id="1020"/>
+## Render-Since-Day-110 <a id="1020"/>
 
 <p style="color:red;">We made some of the most importante Repositories private, therefore the Project cannot be built any more from "Outsiders". </p>
 
-### Since Day-14 <a id="1002"/>
+## Render-Since Day-14 <a id="1002"/>
 
 Use the following Work-Flow to render the Day-24 using the [Bash-Shell](9000142.md):
 
-#### Define the Day
+### Define the Day
 
 ```console
 $ export Day-X="Day-24"
@@ -26,7 +19,7 @@ $ export Day-X="Day-24"
 ✔ ~ 
 ```
 
-#### Check-Out Rendering-Repository
+### Check-Out Rendering-Repository
 
 ```console
 $ git clone git@github.com:All-Dings/111.git
@@ -41,7 +34,7 @@ Receiving objects: 100% (1836/1836), 4.25 MiB | 5.93 MiB/s, done.
 Resolving deltas: 100% (918/918), done.
 ```
 
-#### Change into the Rendering-Directory
+### Change into the Rendering-Directory
 
 ```console
 $ cd 111
@@ -49,7 +42,7 @@ $ cd 111
 ```
 ✔ ~/111 [Master|✔]
 ```
-#### Initialize Git-Sub-Modules
+### Initialize Git-Sub-Modules
 
 ```console
 ✔ ~/111 [Master|✔] $ git submodule update --init --recursive 
@@ -81,7 +74,7 @@ Submodule path '260010000': checked out 'a5bf2e44fd7785f0aa4dc64bd3e8daa815422e8
 Submodule path '888': checked out '32c9fe7f866f04d9f90ad6ec8a1cfe824ebceaa5'
 ```
 
-#### Checkout the Day-X-Tag
+### Checkout the Day-X-Tag
 
 ```console
 ✔ ~/111 [Master|✔] git checkout $Day-X
@@ -129,9 +122,9 @@ Entering '888'
 HEAD is now at 32c9fe7 Make README.md a Soft-Link to 888.md
 ```
 
-#### Build Html-Pages
+### Build Html-Pages
 
-##### Since Day-42
+## Render-Since-Day-42 <a id="1011"/>
 
 ```console
 ✔ ~/111 [Day-42|✔] make
@@ -146,7 +139,7 @@ $ make render
 ✔ ~/111 [Day-42|✔] make render
 ```
 
-##### Before Day-42
+## Render-Before-Day-42  <a id="1010"/>
 
 ```console
 ✔ ~/111 [Day-24|✔] $ make -f 300001000.make
@@ -167,11 +160,11 @@ echo "All-Things-Make-File"
 All-Things-Make-File
 ```
 
-#### Open local index.html with your favourite Web-Browser
+### Open local index.html with your favourite Web-Browser
 
 Use e.g. the [Mac-Os-Finder](9000144.md) or the [Ms-File-Explorer](9000145.md) to navigate into the `111-Directory` and then open the `index.html` File.
 
-### Before-Day-14 <a id="1001"/>
+## Render-Before-Day-14 <a id="1001"/>
 
 Before the Day-14 it is possible to render the Project, but it is a bit more complicated. If you really need that, read [About-All-Dings](23.md#2300) to find out, how this works.
 
