Add Render-Day-120 Documentation

--- a/300000009.md
+++ b/300000009.md
@@ -2,6 +2,174 @@
 
 I am a [Work-Flow](120000002.md) for the [Dings-Project](300000006.md).
 
+## Insider-Note
+
+Since [Day-110](#1020) we made some of the most important Repositories private, therefore the Project cannot be built any more by "Outsiders".
+
+## Render-Since-Day-120 <a id="1030"/>
+
+Assume a User "Muffi" wants to setup a new Dings-System.
+
+### Setup Dings_Dir
+
+```bash
+vi ~/.bashrc
+export Dings_Dir="/Users/Schnuffi/All-Dings/111"
+export PATH=$PATH:.:$Dings_Dir/Work-Dir
+```
+
+### Clone 111
+
+```bash
+$ cd /Users/Schnuffi/All-Dings
+$ git clone git@github.com:All-Dings/111.git
+$ mkdir Big-Data
+$ mkdir Repositories.Local
+```
+
+### Create Local-Repositories
+
+```bash
+$ cd Repositories.Local
+$ git init --bare 1971091180.git
+$ cd ../111
+```
+
+### Edit Dings-Config
+
+```bash
+$ vi .Dings/Config/Dings-Config
+```
+
+Keep the following Repositories:
+
+- 0.git (Michael Holzheu)
+- 400000000.git (Media-Files)
+- 300000007.git (Dings-System)
+
+```
+diff --git a/.Dings/Config/Dings-Config b/.Dings/Config/Dings-Config
+index a017bcb..39fd3d3 100644
+--- a/.Dings/Config/Dings-Config
++++ b/.Dings/Config/Dings-Config
+@@ -1,26 +1,17 @@
+ {
+        "Top_Bar_Items_Dict": {
+                "Project":      "23",
+-               "Muffi":        "21",
++               "Schnuffi":     "1971091180",
+                "Dings":        "17"
+        },
+        "Git": {
+-               "Name":         "Muffi Holzheu",
+-               "EMail":        "Muffi@Holzheu.De",
++               "Name":         "Schnuffi Holzheu",
++               "EMail":        "Schnuffi@Holzheu.de",
+                "Repository_List": [
+                        "git@github.com:All-Dings/0.git",
+-                       "file:///Users/Muffi/All-Dings/Repositories.Local/0-secrets-local.git",
+-                       "file:///Users/Muffi/All-Dings/Repositories.Local/300000007-secrets.git",
+                        "git@github.com:All-Dings/400000000.git",
+-                       "file:///Users/Muffi/All-Dings/Repositories.Local/1000010000.git"
++                       "file:///Users/Schnuffi/All-Dings/Repositories.Local/1971091180.git"
+                ]
+        }
+ }
+```
+
+### Edit Dings-Config-Server
+
+```bash
+$ vi .Dings/Config/Dings-Config-Server
+```
+
+```
+diff --git a/.Dings/Config/Dings-Config-Server b/.Dings/Config/Dings-Config-Server
+index c6e95f0..75d270b 100644
+--- a/.Dings/Config/Dings-Config-Server
++++ b/.Dings/Config/Dings-Config-Server
+@@ -3,11 +3,7 @@
+                "Name":         "dings.site",
+                "Admin_EMail":  "Admin@Dings.Site",
+                "Http": {
+-                       "Port":         "80"
+-               },
+-               "Https": {
+-                       "Key":          "888888896.key",
+-                       "Certificate":  "300200001.crt"
++                       "Port":         "8080"
+                }
+        },
+        "Dings_Server": {
+```
+
+### Install Docker on Host
+
+See: [Howto-Setup-AWS-EC2](300000042.md)
+
+### Build Docker-Image
+
+```bash
+$ make docker
+```
+
+### Build Web-Site
+
+```bash
+$ make workdir
+$ dings-host docker run bash
+$ make render
+```
+
+### Edit /etc/host.conf
+
+```bash
+$ vi /etc/host.conf
+```
+
+```
+127.0.0.1   localhost.dings.site
+```
+
+### Run Dings-Site
+
+```bash
+$ dings-host docker web start
+```
+
+### Happy Surfing
+
+Goto: [Http://Localhost.Dings.Site](http://localhost.dings.site)
+
+### Add new Content to Local-Repository
+
+```bash
+$ cd .Dings/Repositories/1971091180
+$ vi 3000000001.md
+$ cat 3000000001.md
+# My-first-Dings-Page
+
+I am a [Web-Page](2000253.md).
+$ git add 3000000001.md
+$ git commit -m "Add My-first-Dings-Page"
+$ git push
+```
+
+### Add Code
+
+```bash
+$ cd .Dings/Repositories/300000007
+$ git checkout -b My-Devel-Branch
+```
+
+### Rebuild Pages
+
+```bash
+$ make workdir
+$ dings-host docker run bash
+$ make render
+```
+
 ## Render-Since-Day-110 <a id="1020"/>
 
 <p style="color:red;">We made some of the most importante Repositories private, therefore the Project cannot be built any more from "Outsiders". </p>
