--- a/300000009.md
+++ b/300000009.md
@@ -118,7 +118,7 @@ $ make docker
 ```bash
 $ make workdir
 $ dings-host docker run bash
-$ make render
+root@dings:/111 $ make render
 ```
 
 ### Edit /etc/host.conf
