Add Big-Data Work-Flow

--- a/300000009.md
+++ b/300000009.md
@@ -143,8 +143,13 @@ Goto: [Http://Localhost.Dings.Site](http://localhost.dings.site)
 
 ### Add new Content to Local-Repository
 
+#### Add first Number-File
+
 ```bash
 $ cd .Dings/Repositories/1971091180
+$ ln -s ../.Big-Data .Big-Data
+$ git add .Big-Data
+$ git commit -m "Add Big-Data"
 $ vi 3000000001.md
 $ cat 3000000001.md
 # My-first-Dings-Page
@@ -153,6 +158,28 @@ I am a [Web-Page](2000253.md).
 $ git add 3000000001.md
 $ git commit -m "Add My-first-Dings-Page"
 $ git push
+```
+
+#### Add first Big-Data-File
+
+```bash
+$ shasum -a 1 ~/My-Picture.jpg
+59fa41cebd6bfaf196da331ada26d254a5035e01  ~/My-Picture.jpg
+$ cp ~/My-Picture.jpg .Big-Data/3000000002-0-59fa41cebd6bfaf196da331ada26d254a5035e01.jpg
+$ ln -s .Big-Data/3000000002-0-59fa41cebd6bfaf196da331ada26d254a5035e01.jpg 3000000002.jpg
+$ vi 3000000002.md
+$ cat 3000000002.md
+# My-First-Image
+
+I am an [Image](30000002.md).
+
+<a href="30000002.jpg">
+  <img src="30000002.jpg" alt="My-First-Image" style="width:100%;"/>
+</a>
+$ git add 3000000002.*
+$ git commit -m "Add My-First-Image"
+$ ls /Users/Schnuffi/All-Dings/Big-Data
+3000000002-0-59fa41cebd6bfaf196da331ada26d254a5035e01.jpg
 ```
 
 ### Add Code
