Split Big-Data Chapter

--- a/300000009.md
+++ b/300000009.md
@@ -141,15 +141,20 @@ $ dings-host docker web start
 
 Goto: [Http://Localhost.Dings.Site](http://localhost.dings.site)
 
-### Add new Content to Local-Repository
-
-#### Add first Number-File
+### Setup Local-Repository
 
 ```bash
 $ cd .Dings/Repositories/1971091180
 $ ln -s ../.Big-Data .Big-Data
 $ git add .Big-Data
 $ git commit -m "Add Big-Data"
+```
+
+### Add new Content to Local-Repository
+
+#### Add first Number-File
+
+```bash
 $ vi 3000000001.md
 $ cat 3000000001.md
 # My-first-Dings-Page
