--- a/300000009.md
+++ b/300000009.md
@@ -13,9 +13,11 @@ Assume a User "Muffi" wants to setup a new Dings-System.
 ### Setup Dings_Dir
 
 ```bash
-vi ~/.bashrc
+$ vi ~/.bashrc
 export Dings_Dir="/Users/Schnuffi/All-Dings/111"
-export PATH=$PATH:.:$Dings_Dir/Work-Dir
+export PATH=$PATH:$Dings_Dir/Work-Dir
+:wq
+$ source ~/.bashrc
 ```
 
 ### Clone 111
@@ -106,6 +108,14 @@ index c6e95f0..75d270b 100644
 ### Install Docker on Host
 
 See: [Howto-Setup-AWS-EC2](300000042.md)
+
+Make non-root User access Docker:
+
+```bash
+$ sudo usermod -aG docker $USER
+```
+
+Logout and restart your Session to activate the new Setting.
 
 ### Build Docker-Image
 
