Add Docker-Group Information

--- a/300000042.md
+++ b/300000042.md
@@ -28,3 +28,9 @@ $ systemctl status docker
 ```
 
 - Source: [Https://Digitalocean.Com](https://digitalocean.com/community/tutorials/how-to-install-and-use-docker-on-ubuntu-22-04)
+
+Add User to Docker-Group:
+
+```
+$ sudo usermod -aG docker $USER
+```
