--- a/21.md
+++ b/21.md
@@ -179,13 +179,13 @@ Then we can calculate _Fun_per_Woman_ as Follows:
 $$ Fun\_per\_Woman = Average(x_1,x_2) $$
 $$ =  \frac{\sum\limits_{i=1}^{2}{x_i}}{2} = \frac{x_1 + x_2}{2} = \frac{1 + 1}{2} = \frac{2}{2} = 1 $$
 
-So on Average each Woman has one Time Fun - But now let's see, if Men *really* have more Fun, like my Friend claimed, so let's define first again the Variables:
+So on Average each Woman has one Time Fun - So now let's see, if Men *really* have more Fun, like my Friend claimed, so let's define first again the Variables:
 
 $$ x_1 = Fun\_Count\_M1 = 2 $$
 $$ x_2 = Fun\_Count\_M2 = 0 $$
 $$ n = Men\_Count = 2 $$
 
-Analogous to just now we now can also calculate the _Fun_per_Men_ as Follows:
+Analogous to just now we can also calculate the _Fun_per_Men_ as Follows:
 
 $$ Fun\_per\_Man = Average(x_1,x_2) $$
 $$ =  \frac{\sum\limits_{i=1}^{2}{x_i}}{2} = \frac{x_1 + x_2}{2} = \frac{2 + 0}{2} = \frac{2}{2} = 1 $$
