--- a/21.md
+++ b/21.md
@@ -270,7 +270,7 @@ My first Program with the [Ernst-Bloch-Choir](2010013.md) was called [Heimat](20
 
 ![Uprooted Thing](400000144.jpg)
 
-Though on one Side the Topic makes me a little bit sad, on the Other Side the *really* beatiful [Harmonies](60100.md) make my Life a little bit happier again.
+Though on one Side the Topic made me a little bit sad, on the Other Side the *really* beatiful [Harmonies](60100.md) put me in a happier Mood again.
 
 The only *real* [Criticism](600174.md) I had, was the [Complexity](600023.md) of the [Messages](600175.md), which were already difficult to understand for "normal" [People](40000001.md) and almost "Mission-Impossible" for a "confused" [Man](40080022.md) like myself.
 
