Fix Numerus, Tempus and Punctuation

--- a/23.md
+++ b/23.md
@@ -190,7 +190,7 @@ Because it was a *really* nice Conclusion for my Day, I thankfully buy from [our
 
 On our regular [TüDoKop](2010026.md)-Round I report about [My-Patent](300050001.md) and the [Plan](600045.md) of using a [Block-Chain](300000000.md) to prevent Others from [Stealing](670013.md) the [Idea](600012.md).
 
-After my [Friends](180000002.md) give me the [Advice](600150.md) to better pay for a [Patent-Lawyer](202000021.md), I respond that [Konrad_Zuse](70000045.md) once has said [[3]](#12053), that these are the only Ones, who would earn [Money](6666.md) with [Patents](670022.md).
+After my [Friends](180000002.md) gives me the [Advice](600150.md), to better pay for a [Patent-Lawyer](202000021.md), I respond that [Konrad_Zuse](70000045.md) once had said [[3]](#12053), that these are the only Ones, who would earn [Money](6666.md) with [Patents](670022.md).
 
 Although this might be true, perhaps I really should to be more careful with such sensitive Things, as also [My-Little-Teacher](151000001.md) told me around one Hour later:
 
