--- a/23.md
+++ b/23.md
@@ -611,7 +611,7 @@ In [Germany](140000025.md) there is an old [Joke](720001.md) about the [Swabians
 
 $$ Answer = \mathrm{Bauuuspaaarvertrag!} $$
 
-And besides other interesting Stuff that was the Topic of a Meeting with my [Banker-Friend](1971091154.md), who is also am Member of our [Doppel-Kopf-Crew](2010026.md). He explained me the Concept of this [Bauspar-Vertrag](130000028.md) with a simple Example:
+And besides other interesting Stuff that was the Topic of a Meeting with my [Banker-Friend](1971091154.md), who is also am Member of our [Doppel-Kopf-Team](2010026.md). He explained me the Concept of this [Bauspar-Vertrag](130000028.md) with a simple Example:
 
 Let's assume I want to buy a Tiny-House for 100.000 Euro and can save for this [Goal](60058.md) 10.000 Euro each Year, with simple Mathematics we can calculate my Personal-Wait-Time *PWT* until I can put the required Money on the Table:
 
