--- a/23.md
+++ b/23.md
@@ -613,7 +613,7 @@ $$ Answer = \mathrm{Bauuuspaaarvertrag!} $$
 
 And besides other interesting Stuff that was the Topic of a Meeting with my [Banker-Friend](1971091154.md), who is also am Member of our [Doppel-Kopf-Team](2010026.md). He explained me the Concept of this [Bauspar-Vertrag](130000028.md) with a simple Example:
 
-Let's assume I want to buy a Tiny-House for 100.000 Euro and can save for this [Goal](60058.md) 10.000 Euro each Year, with simple Mathematics we can calculate my Personal-Wait-Time *PWT* until I can put the required Money on the Table:
+If I want to buy a Tiny-House for 100.000 Euro and can save for this [Goal](60058.md) 10.000 Euro each Year, we can simply calculate my Personal-Wait-Time *PWT*, until I can put the required Money on the Table:
 
 $$ PWT = \frac{100.000\;\mathrm{Euro}}{10.000\;\mathrm{\frac{Euro}{Year}}} = 10\;\mathrm{Years} $${#10820:0}
 
