--- a/23.md
+++ b/23.md
@@ -637,6 +637,7 @@ MAXIMUM_FRIEND_COUNT = 4      # Maximum Number of Friends that pool the Money
 
 # Calculate the Sum of Years to buy all Houses
 def Calculate_Wait_Time_Sum(Friends_Count):
+        # Initialize Variables
         Wait_Time_Sum = 0
         Saved_Money = 0
         Houses = 0
