--- a/1971091152.md
+++ b/1971091152.md
@@ -2,6 +2,10 @@
 
 I am a [Cuddly-Toy](281000003.md).
 
+# About
+
+- My [Mother](40000008.md) is [Alena](88.md).
+
 ## Photos  <a id="1000"/>
 
 ![Schnuffi in Bed](400000217.jpg)
