--- a/40000022.md
+++ b/40000022.md
@@ -1,3 +1,8 @@
 # Biologic-Species
 
 I am a [Type](60107.md) in a [Biology-System](40000021.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Species)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q7432)
