--- a/40000024.md
+++ b/40000024.md
@@ -1,3 +1,8 @@
 # Biologic-Genus
 
 I am a [Sub-Set](60105.md) of the [Biologic-Species](40000022.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Genus)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q34740)
