--- a/1971091151.md
+++ b/1971091151.md
@@ -4,6 +4,7 @@ I am a [Cuddly-Toy](281000003.md).
 
 ## About
 
+- I am a [Polar-Bear](40000077.md).
 - My [Mother](40000008.md) is [Alena](88.md).
 - My [Father](40000007.md) is [Michael](0.md).
 
