--- a/1971091190.md
+++ b/1971091190.md
@@ -4,4 +4,5 @@ I am a [Cuddly-Toy](281000003.md).
 
 # About
 
+- I am a [Polar-Bear](40000077.md).
 - I am a [Present](600189.md) from [Constance](1971091189.md).
