--- a/300040000.md
+++ b/300040000.md
@@ -1,3 +1,3 @@
-# Dings-Object
+# Dings_App
 
-I am the [Base-Class](250000033.md) for all [Software-Components](404.md) in the [Dings-System](300000007.md).
+I am [App](9000055.md) in the [Dings-System](300000007.md).
