--- a/1971091104.md
+++ b/1971091104.md
@@ -1,3 +1,7 @@
 # My-Surface-Laptop-Studio
 
 I am a [Laptop](20000013.md) from [Microsoft](240000018.md).
+
+## Photos
+
+![Gaming with Microsoft](400000018.jpg)
