Add Description and Photo

--- a/1971091118.md
+++ b/1971091118.md
@@ -1,3 +1,7 @@
 # My-Mac-Book
 
-My-Mac-Book is ...
+My-Mac-Book is a [Laptop](20000013.md) from [Apple](240000003.md).
+
+## Photos
+
+![Macbook with Friends](400000014.jpg)
