--- a/240000049.md
+++ b/240000049.md
@@ -4,7 +4,7 @@ I am a [Company](240000000.md).
 
 ## About
 
-- I am a [Provider](600086.md) of [Speach-Synthesis](404.md).
+- I am a [Provider](600086.md) of [Speech-Synthesis](2000285.md).
 
 ## Links
 
