--- a/2000285.md
+++ b/2000285.md
@@ -1,6 +1,6 @@
-# Speach-Synthesis
+# Speech-Synthesis
 
-I am a [Process](60062.md) for [Speach](60010004.md).
+I am a [Process](60062.md) for [Speech](60010004.md).
 
 ## Links
 
