--- a/700068.md
+++ b/700068.md
@@ -1,6 +1,6 @@
 # Typeface
 
-I am a [Character-Set](700032.md) in [Typographics](404.md).
+I am a [Character-Set](700032.md) in a [Typographics-System](8100001.md).
 
 ## Links
 
