Improve Description and add Version / Block-Chain-Proof

--- a/300081001.md
+++ b/300081001.md
@@ -2,6 +2,10 @@
 
 I am a [Dings-Sub-Project](300000033.md) for the [Realization](600033.md) of [Flying-Services](404.md).
 
+## Version <a id="900"/>
+
+Git-Version and History: [https://github.com](https://github.com/All-Dings/0/commits/Master/300081001.md.md)
+
 ## Problem-Statement <a id="1000"/>
 
 In order to provide Services, both the [Consumer](600076.md) and the [Provider](600086.md) have to come together in [Time](10000024.md) and [Space](10000050.md). Currently most of the Time the Consumer has to travel to the Provider, which has serveral Drawbacks:
@@ -10,7 +14,7 @@ In order to provide Services, both the [Consumer](600076.md) and the [Provider](
 - Providing Production-Resources, e.g. Real-Estate or Equipment for the Services is associated with high Costs.
 - The Utilization of Production-Resources is often suboptimal, e.g. at Holiday-Time Offices are not used.
 
-Based on my own Considerations we identified [Potential](60128.md) for [Improvement](60135.md) in several Fields.
+Based on my own Considerations I identified [Potential](60128.md) for [Improvement](60135.md) in several Fields.
 
 ## Solution <a id="2000"/>
 
@@ -22,7 +26,7 @@ We provide [Flying-Services](404.md), where the Production-Resources are mobile:
 - Motor-Bikes
 - Bicycles
 
-One single Resource can also be used for multiple Use-Cases, e.g. a Hotor-Home can be equipped with a Wash-Basin for Hair-Styling and a Table for Massage. People, who own a Resource can also rent it to Service-Providers, when the Resource is not utilized, e.g. when the Caravan is not used for Vacation.
+One single Resource can also be used for multiple Use-Cases, e.g. a Hotor-Home can be equipped with a Wash-Basin for Hair-Styling or a Table for Massage. Humasn, who own Resources can rent them to other Service-Providers, when the Means-of-Production are currently not utilized, e.g. when a Caravan is not used for Vacation.
 
 The [Communities](140000034.md) should provide Services, which can be rented by the Service-Providers for the Service-Time, for Example:
 
@@ -32,7 +36,7 @@ The [Communities](140000034.md) should provide Services, which can be rented by 
 
 ## Examples <a id="3000"/>
 
-The proposed Concept works for multiple Areas, in the Following some of them are mentioned.
+The proposed Concept can be applied to multiple Areas, where in the Following some of them are mentioned.
 
 ### Flying-Hair-Stylist <a id="3010"/>
 
@@ -52,27 +56,23 @@ The proposed Concept works for multiple Areas, in the Following some of them are
 
 ## Benefits <a id="4000"/>
 
-### Resource-Optimization <a id="4010"/>
+### Resources <a id="4010"/>
 
-A Booking-System is implemented in the Dings-System, where the Service-Providers and Consumers can come together in Space and Time with optimal Rescource-Utilization.
+A Booking-System is implemented in the [Dings-System](300000007.md), where the Service-Providers and Consumers can come together in the [Space-Time-Continuum](10000027.md)
 
-For Example Service-Providers can document there in Advance at which Time a Service is Provided in which Area. The Service-Consumers can then book fitting Time/Space-Slots.
+For Example Service-Providers can document there in Advance at which Time a Service is Provided in which Area and the Service-Consumers can then book fitting Time/Space-Slots.
 
-### Cost-Reduction  <a id="4020"/>
-
-- Costs are reduced.
-- Resources are better utilized.
+All together wll lead to better Rescource-Utilization and Cost-Reduction.
 
 ### Environment <a id="4030"/>
 
-- Instead of Traveling of multiple Consumers only one Provider has to move.
+Instead of Traveling of multiple Consumers only one Provider has to move, which reduces for Example the [CO<sub>2</sub>](10100008.md)-Footprint and in Consequence to a Relief of the [Global-Warming](290000002.md).
 
 ### Real-Estate <a id="4040"/>
 
-- The Requirement of providing lot's of Buildings for Services is reduced.
+The Requirement of providing lot's of Buildings for Services is reduced.
 
 ## Risk-Analysis <a id="2000"/>
 
-- Production-Resources of Others are not treated lovingly by the Service-Providers and Consumers.
+- Production-Resources of Others might not treated lovingly by the Service-Providers and Consumers.
 - Common Real-Estate, e.g. Paring-Space is utilizated, which should somehow be compensated.
-
