--- a/300050001.md
+++ b/300050001.md
@@ -4,7 +4,7 @@ I am a [Dings-Patent](300000030.md) of [Michael_Holzheu](0.md).
 
 ## Version <a id="1800"/>
 
-Git-Version and History: [https://github.com](https://github.com/All-Dings/0/commits/Master/300050001.md)
+Git-Version and History: <a href="https://github.com/All-Dings/0/commits/Master/300050001.md">https://github.com</a>
 
 ## Abstract <a id="1600"/>
 
