--- a/300081001.md
+++ b/300081001.md
@@ -4,7 +4,7 @@ I am a [Dings-Sub-Project](300000033.md) for the [Realization](600033.md) of [Fl
 
 ## Version <a id="900"/>
 
-Git-Version and History: [https://github.com](https://github.com/All-Dings/0/commits/Master/300081001.md)
+Git-Version and History: <a href="https://github.com/All-Dings/0/commits/Master/300081001.md">https://github.com</a>
 
 ## Problem-Statement <a id="1000"/>
 
