Fix Name (for the Time being)

--- a/300081001.md
+++ b/300081001.md
@@ -66,7 +66,7 @@ All together wll lead to better Rescource-Utilization and Cost-Reduction.
 
 ### Environment <a id="4030"/>
 
-Instead of Traveling of multiple Consumers only one Provider has to move, which reduces for Example the [CO<sub>2</sub>](10100008.md)-Footprint and in Consequence to a Relief of the [Global-Warming](290000002.md).
+Instead of Traveling of multiple Consumers only one Provider has to move, which reduces for Example the [CO2](10100008.md)-Footprint and in Consequence to a Relief of the [Global-Warming](290000002.md).
 
 ### Real-Estate <a id="4040"/>
 
